grabo modificaciones sass

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,304 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;&family=Roboto:wght@300&display=swap');
+/* Error: Expected ".
+ *    ,
+ * 69 |         "footerContainerDiv1
+ *    |                             ^
+ *    '
+ *   scss\styles.scss 69:29  root stylesheet */
 
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  color: rgb(1, 19, 103);
-  font-family: 'Noto Sans';
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: Expected ".\a    \2577 \a 69 \2502          "footerContainerDiv1\d\a    \2502                              ^\a    \2575 \a   scss\\styles.scss 69:29  root stylesheet';
 }
-
-/*Header*/
-
-.navbar {
-  background-color: rgb(184, 217, 252);
-  .liNav{
-    list-style: none;
-  }
-  .nav-pills .nav-link.active,
-  .show>.nav-pills .nav-link{
-      background: rgb(1, 19, 103) !important;
-  }
-}
-
-
-/*main index*/
-h1{
-  background-color:rgb(126, 205, 15);
-}
-
-
-/*footer*/
-.footerContainer{
-  width: 100%;
-  background-color: rgb(184, 217, 252);
-  padding-top: 20px;
-  .icon{
-    text-decoration: none;
-  }
-  .fa-facebook-f{
-    color: rgb(24, 119, 242);
-    font-size: 2rem;
-    }
-  .fa-instagram{
-    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-size: 2rem;
-  }
-  .fa-tiktok {
-    color:rgb(1, 19, 103);
-    font-size: 2rem;
-  }
-  .fa-x-twitter{
-    color:rgb(119, 119, 119);
-    font-size: 2rem;
-  }
-  .fa-whatsapp{
-    color: rgb(37, 211, 102);
-    font-size: 2rem;
-  }
-  @media screen and (max-width:900px){
-    footContainer{
-      grid-template-areas: 
-      "footerContainerDiv1
-      footerContainerDiv2
-      footerContainerDiv3
-      footerContainerDiv4";
-    }
-    .footerContainerDiv1{
-      width: 90%;
-      grid-gap:10px;
-      padding: 10px 0px;
-    }
-    .footerContainerDiv2{
-      width: 90%;
-       grid-gap:10px;
-      padding: 10px 0px;
-    }
-    .footerContainerDiv3{
-      width: 90%;
-      grid-gap:10px;
-      padding: 10px 0px;
-    }
-    .footerContainerDiv4{
-      width: 90%;
-      grid-gap:10px;
-      padding: 10px 0px;
-    }
-  }
-}
-
-/**Index**/
-.mainDiv{
-  .mainSection{
-    width:fit-content;
-    border: 2px solid rgb(1, 19, 103);
-    margin: 20px 10px 20px 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 10px;
-    box-shadow: 10px 10px 10px -5px rgba(0,0,0,0.6);
-  }
-  .mainSectionTitle {
-    font-weight: bold;
-    text-decoration: underline;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    }
-  .mainSectionText{
-    font-size: 1.2rem;
-    text-align: justify;
-    padding-right: 10px;
-    padding-left: 10px;
-  }
-  .staff{
-    width: 80%;
-    margin:0px;
-    padding: 0px;
-  }
-}
-@media screen and (max-width:900px) {
-  .mainDiv {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; 
-    width: auto;
-  }
-  .mainSectionText{
-    font-size: 0.8rem;
-    }
-  .staff{
-    width: 60%;
-  }
-}
-
-
-/*Noticias*/
-.notiDiv{
-  margin-left: 50px;
-  .notiSection{
-    width:30%;
-    border: 2px solid rgb(1, 19, 103);
-    margin: 20px 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 10px;
-    box-shadow: 10px 10px 10px -5px rgba(0,0,0,0.6);
-  }
-  .notiSectionTitle {
-    font-size: 1.2rem;
-    font-weight: bold;
-    text-decoration: underline;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    }
-  .notiSectionText{
-    font-size: 1.2rem;
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-left: 10px;
-  }
-  .iframe{
-    width:80%;
-    height:60%;
-  }
-  .notiImg1{
-    width: 90%;
-  }
-  .notiImg2{
-    width: 60%;
-  }
-}
-
-@media screen and (max-width:900px) {
-  .notiDiv {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; 
-    width:fit-content;
-  }
-  .notiSectionText{
-    font-size: 0.8rem;
-    }
-}
-
-/*Tienda*/
-
-.priceCard{
-  color:rgb(126, 205, 15);
-  font-weight: bold;
-  font-size: 1.2rem;
-  background-color: rgb(1, 19, 103);
-  text-align: center;
-}
-
-.cardConteiner{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 90%;
-  margin: auto;
-  
-  .card{
-    width: 30%;
-    height: 65vh;
-    border: 2px solid rgb(1, 19, 103);
-    margin: 0 10px 10px 10px;
-    border-radius: 10px 10px 10px 10px;
-    box-shadow: 10px 10px 10px -5px rgba(0,0,0,0.6);
-
-    .imgCard1{
-      width: 80%;
-      justify-content: center;
-    }
-    .imgCard2{
-      width: 80%;
-      margin: 0px;
-      padding: 0px;
-    }
-
-    .imgCard3{
-      width: 100%;
-      margin:0px;
-      padding: 0px;
-    }
-
-    .imgCard4{
-      width: 78%;
-      margin: 0px;
-      padding: 0px;
-    }
-
-    .imgCard5{
-      width: 75%;
-      margin: 0px;
-      padding: 0px;
-    }
-    
-    .imgCard6{
-      width: 100%;
-      margin: 0px;
-      padding: 0px;
-    }
-    
-    .imgCard7{
-      width: 90%;
-      margin: 0px;
-      padding: 0px;
-    }
-    
-    .imgCard8{
-      width: 83%;
-      margin: 0px;
-      padding: 0px;
-    }
-    .imgCard9{
-      width: 68%;
-      margin: 0px;
-      padding: 0px;
-    }
-
-    .bodyCard{
-      margin: 0px;
-      padding:0px 10px 0px 10px;
-      .sale{
-        text-align: center;
-      }
-      .priceCard{
-        color:rgb(126, 205, 15);
-        font-weight: bold;
-        font-size: 1.2rem;
-        background-color: rgb(1, 19, 103);
-        text-align: center;
-      }
-
-    }
-  }
-}
-
-@media screen and (max-width:900px) {
-  .cardContainer {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
-
-/*Main contacto */
-.contactForm{
-  background-color: rgb(222, 238, 255);
-  width: 80%;
-  margin-bottom: 20px;
-  .formText{
-    font-size: 1.5rem;
-    text-align: center;
-  }
-  .sendButton{
-    background-color: rgb(1, 19, 103);
-    border-color: rgb(1, 19, 103);
-  }
-}
-
