grabo modificaciones sass

--- a/_variables.scss
+++ b/_variables.scss
@@ -1,3 +1,7 @@
 $verde-cruz: rgb(126, 205, 15);
 $azul-cruz: rgb(1, 19, 103);
 $celeste-fondo: rgb(184, 217, 252);
+$color-fb: rgb(24, 119, 242);
+$color-twitter: rgb(119, 119, 119);
+$color-wa: rgb(37, 211, 102);
+
