--- a/css/styles copy.css
+++ b/css/styles copy.css
@@ -275,7 +275,6 @@ h1{
         background-color: rgb(1, 19, 103);
         text-align: center;
       }
-
     }
   }
 }
@@ -286,6 +285,7 @@ h1{
     flex-direction: column;
     flex-wrap: wrap;
   }
+}
 
 /*Main contacto */
 .contactForm{
