--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
-/* Error: Expected ".
- *    ,
- * 65 |       "footerContainerDiv1
- *    |                           ^
- *    '
- *   scss\styles.scss 65:27  root stylesheet */
+/* Error: Can't find stylesheet to import.
+ *   ,
+ * 2 | @import 'variables';
+ *   |         ^^^^^^^^^^^
+ *   '
+ *   scss\styles.scss 2:9  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -13,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: 'Error: Expected ".\a    \2577 \a 65 \2502        "footerContainerDiv1\d\a    \2502                            ^\a    \2575 \a   scss\\styles.scss 65:27  root stylesheet';
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 2 \2502  @import 'variables';\d\a   \2502          ^^^^^^^^^^^\a   \2575 \a   scss\\styles.scss 2:9  root stylesheet";
 }
