--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,303 +1,287 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;&family=Roboto:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;&family=Roboto:wght@300&display=swap");
+@import 'variables';
+@import 'reset';
 
-*{
+
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   color: rgb(1, 19, 103);
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
 }
 
 /*Header*/
-
 .navbar {
   background-color: rgb(184, 217, 252);
-  .liNav{
-    list-style: none;
-  }
-  .nav-pills .nav-link.active,
-  .show>.nav-pills .nav-link{
-      background: rgb(1, 19, 103) !important;
-  }
 }
-
+.navbar .liNav {
+  list-style: none;
+}
+.navbar .nav-pills .nav-link.active,
+.navbar .show > .nav-pills .nav-link {
+  background: rgb(1, 19, 103) !important;
+}
 
 /*main index*/
-h1{
-  background-color:rgb(126, 205, 15);
+h1 {
+  background-color: $verde-cruz;
 }
 
-
 /*footer*/
-.footerContainer{
+.footerContainer {
   width: 100%;
   background-color: rgb(184, 217, 252);
   padding-top: 20px;
-  .icon{
-    text-decoration: none;
+}
+.footerContainer .icon {
+  text-decoration: none;
+}
+.footerContainer .fa-facebook-f {
+  color: rgb(24, 119, 242);
+  font-size: 2rem;
+}
+.footerContainer .fa-instagram {
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 2rem;
+}
+.footerContainer .fa-tiktok {
+  color: rgb(1, 19, 103);
+  font-size: 2rem;
+}
+.footerContainer .fa-x-twitter {
+  color: rgb(119, 119, 119);
+  font-size: 2rem;
+}
+.footerContainer .fa-whatsapp {
+  color: rgb(37, 211, 102);
+  font-size: 2rem;
+}
+@media screen and (max-width: 900px) {
+  .footerContainer footContainer {
+    grid-template-column: none;
   }
-  .fa-facebook-f{
-    color: rgb(24, 119, 242);
-    font-size: 2rem;
-    }
-  .fa-instagram{
-    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-size: 2rem;
+  .footerContainer .footerContainerDiv1 {
+    width: 90%;
+    grid-gap: 10px;
+    padding: 10px 0px;
   }
-  .fa-tiktok {
-    color:rgb(1, 19, 103);
-    font-size: 2rem;
+  .footerContainer .footerContainerDiv2 {
+    width: 90%;
+    grid-gap: 10px;
+    padding: 10px 0px;
   }
-  .fa-x-twitter{
-    color:rgb(119, 119, 119);
-    font-size: 2rem;
+  .footerContainer .footerContainerDiv3 {
+    width: 90%;
+    grid-gap: 10px;
+    padding: 10px 0px;
   }
-  .fa-whatsapp{
-    color: rgb(37, 211, 102);
-    font-size: 2rem;
-  }
-  @media screen and (max-width:900px){
-    footContainer{
-      grid-template-areas: 
-      "footerContainerDiv1
-      footerContainerDiv2
-      footerContainerDiv3
-      footerContainerDiv4";
-    }
-    .footerContainerDiv1{
-      width: 90%;
-      grid-gap:10px;
-      padding: 10px 0px;
-    }
-    .footerContainerDiv2{
-      width: 90%;
-       grid-gap:10px;
-      padding: 10px 0px;
-    }
-    .footerContainerDiv3{
-      width: 90%;
-      grid-gap:10px;
-      padding: 10px 0px;
-    }
-    .footerContainerDiv4{
-      width: 90%;
-      grid-gap:10px;
-      padding: 10px 0px;
-    }
+  .footerContainer .footerContainerDiv4 {
+    width: 90%;
+    grid-gap: 10px;
+    padding: 10px 0px;
   }
 }
 
 /**Index**/
-.mainDiv{
-  .mainSection{
-    width:fit-content;
-    border: 2px solid rgb(1, 19, 103);
-    margin: 20px 10px 20px 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 10px;
-    box-shadow: 10px 10px 10px -5px rgba(0,0,0,0.6);
-  }
-  .mainSectionTitle {
-    font-weight: bold;
-    text-decoration: underline;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    }
-  .mainSectionText{
-    font-size: 1.2rem;
-    text-align: justify;
-    padding-right: 10px;
-    padding-left: 10px;
-  }
-  .staff{
-    width: 80%;
-    margin:0px;
-    padding: 0px;
-  }
+.mainDiv .mainSection {
+  width: fit-content;
+  border: 2px solid rgb(1, 19, 103);
+  margin: 20px 10px 20px 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 10px;
+  box-shadow: 10px 10px 10px -5px rgba(0, 0, 0, 0.6);
 }
-@media screen and (max-width:900px) {
+.mainDiv .mainSectionTitle {
+  font-weight: bold;
+  text-decoration: underline;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.mainDiv .mainSectionText {
+  font-size: 1.2rem;
+  text-align: justify;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+.mainDiv .staff {
+  width: 80%;
+  margin: 0px;
+  padding: 0px;
+}
+
+@media screen and (max-width: 900px) {
   .mainDiv {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
     width: auto;
   }
-  .mainSectionText{
+  .mainSectionText {
     font-size: 0.8rem;
-    }
-  .staff{
+  }
+  .staff {
     width: 60%;
   }
 }
-
-
 /*Noticias*/
-.notiDiv{
+.notiDiv {
   margin-left: 50px;
-  .notiSection{
-    width:30%;
-    border: 2px solid rgb(1, 19, 103);
-    margin: 20px 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 10px;
-    box-shadow: 10px 10px 10px -5px rgba(0,0,0,0.6);
-  }
-  .notiSectionTitle {
-    font-size: 1.2rem;
-    font-weight: bold;
-    text-decoration: underline;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    }
-  .notiSectionText{
-    font-size: 1.2rem;
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-left: 10px;
-  }
-  .iframe{
-    width:80%;
-    height:60%;
-  }
-  .notiImg1{
-    width: 90%;
-  }
-  .notiImg2{
-    width: 60%;
-  }
+}
+.notiDiv .notiSection {
+  width: 30%;
+  border: 2px solid rgb(1, 19, 103);
+  margin: 20px 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 10px;
+  box-shadow: 10px 10px 10px -5px rgba(0, 0, 0, 0.6);
+}
+.notiDiv .notiSectionTitle {
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-decoration: underline;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.notiDiv .notiSectionText {
+  font-size: 1.2rem;
+  padding-top: 10px;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+.notiDiv .iframe {
+  width: 80%;
+  height: 60%;
+}
+.notiDiv .notiImg1 {
+  width: 90%;
+}
+.notiDiv .notiImg2 {
+  width: 60%;
 }
 
-@media screen and (max-width:900px) {
+@media screen and (max-width: 900px) {
   .notiDiv {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; 
-    width:fit-content;
+    align-items: center;
+    width: fit-content;
   }
-  .notiSectionText{
+  .notiSectionText {
     font-size: 0.8rem;
-    }
+  }
 }
-
 /*Tienda*/
-
-.priceCard{
-  color:rgb(126, 205, 15);
+.priceCard {
+  color: rgb(126, 205, 15);
   font-weight: bold;
   font-size: 1.2rem;
   background-color: rgb(1, 19, 103);
   text-align: center;
 }
 
-.cardConteiner{
+.cardConteiner {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   width: 90%;
   margin: auto;
-  
-  .card{
-    width: 30%;
-    height: 65vh;
-    border: 2px solid rgb(1, 19, 103);
-    margin: 0 10px 10px 10px;
-    border-radius: 10px 10px 10px 10px;
-    box-shadow: 10px 10px 10px -5px rgba(0,0,0,0.6);
-
-    .imgCard1{
-      width: 80%;
-      justify-content: center;
-    }
-    .imgCard2{
-      width: 80%;
-      margin: 0px;
-      padding: 0px;
-    }
-
-    .imgCard3{
-      width: 100%;
-      margin:0px;
-      padding: 0px;
-    }
-
-    .imgCard4{
-      width: 78%;
-      margin: 0px;
-      padding: 0px;
-    }
-
-    .imgCard5{
-      width: 75%;
-      margin: 0px;
-      padding: 0px;
-    }
-    
-    .imgCard6{
-      width: 100%;
-      margin: 0px;
-      padding: 0px;
-    }
-    
-    .imgCard7{
-      width: 90%;
-      margin: 0px;
-      padding: 0px;
-    }
-    
-    .imgCard8{
-      width: 83%;
-      margin: 0px;
-      padding: 0px;
-    }
-    .imgCard9{
-      width: 68%;
-      margin: 0px;
-      padding: 0px;
-    }
-
-    .bodyCard{
-      margin: 0px;
-      padding:0px 10px 0px 10px;
-      .sale{
-        text-align: center;
-      }
-      .priceCard{
-        color:rgb(126, 205, 15);
-        font-weight: bold;
-        font-size: 1.2rem;
-        background-color: rgb(1, 19, 103);
-        text-align: center;
-      }
-    }
-  }
+}
+.cardConteiner .card {
+  width: 30%;
+  height: 65vh;
+  border: 2px solid rgb(1, 19, 103);
+  margin: 0 10px 10px 10px;
+  border-radius: 10px 10px 10px 10px;
+  box-shadow: 10px 10px 10px -5px rgba(0, 0, 0, 0.6);
+}
+.cardConteiner .card .imgCard1 {
+  width: 80%;
+  justify-content: center;
+}
+.cardConteiner .card .imgCard2 {
+  width: 80%;
+  margin: 0px;
+  padding: 0px;
+}
+.cardConteiner .card .imgCard3 {
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+}
+.cardConteiner .card .imgCard4 {
+  width: 78%;
+  margin: 0px;
+  padding: 0px;
+}
+.cardConteiner .card .imgCard5 {
+  width: 75%;
+  margin: 0px;
+  padding: 0px;
+}
+.cardConteiner .card .imgCard6 {
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+}
+.cardConteiner .card .imgCard7 {
+  width: 90%;
+  margin: 0px;
+  padding: 0px;
+}
+.cardConteiner .card .imgCard8 {
+  width: 83%;
+  margin: 0px;
+  padding: 0px;
+}
+.cardConteiner .card .imgCard9 {
+  width: 68%;
+  margin: 0px;
+  padding: 0px;
+}
+.cardConteiner .card .bodyCard {
+  margin: 0px;
+  padding: 0px 10px 0px 10px;
+}
+.cardConteiner .card .bodyCard .sale {
+  text-align: center;
+}
+.cardConteiner .card .bodyCard .priceCard {
+  color: rgb(126, 205, 15);
+  font-weight: bold;
+  font-size: 1.2rem;
+  background-color: rgb(1, 19, 103);
+  text-align: center;
 }
 
-@media screen and (max-width:900px) {
+@media screen and (max-width: 900px) {
   .cardContainer {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
   }
 }
-
 /*Main contacto */
-.contactForm{
+.contactForm {
   background-color: rgb(222, 238, 255);
   width: 80%;
   margin-bottom: 20px;
-  .formText{
-    font-size: 1.5rem;
-    text-align: center;
-  }
-  .sendButton{
-    background-color: rgb(1, 19, 103);
-    border-color: rgb(1, 19, 103);
-  }
 }
+.contactForm .formText {
+  font-size: 1.5rem;
+  text-align: center;
+}
+.contactForm .sendButton {
+  background-color: rgb(1, 19, 103);
+  border-color: rgb(1, 19, 103);
+}
+
+/*# sourceMappingURL=styles.css.map */
