--- a/css/styles.css
+++ b/css/styles.css
@@ -61,11 +61,7 @@ h1{
   }
   @media screen and (max-width:900px){
     footContainer{
-      grid-template-areas: 
-      "footerContainerDiv1
-      footerContainerDiv2
-      footerContainerDiv3
-      footerContainerDiv4";
+      grid-template-columns: none;
     }
     .footerContainerDiv1{
       width: 90%;
@@ -119,6 +115,7 @@ h1{
     padding: 0px;
   }
 }
+
 @media screen and (max-width:900px) {
   .mainDiv {
     display: flex;
@@ -134,7 +131,23 @@ h1{
     width: 60%;
   }
 }
+/*Medicamentos*/
+.deliveryMap{
+  margin-left: 100px;
+  margin-right: 100px;
+  padding-bottom: 10px;
+}
 
+.medLink{
+  background-color: rgb(1, 19, 103);
+  border-color: rgb(1, 19, 103);
+  color:aliceblue;
+}  
+.medLink:hover{
+  background-color: rgb(126, 205, 15);
+  border-color: rgb(126, 205, 15);
+  color: rgb(1, 19, 103);
+}
 
 /*Noticias*/
 .notiDiv{
@@ -170,6 +183,21 @@ h1{
   }
   .notiImg2{
     width: 60%;
+    transition: 2s;
+  }
+  .notiImg2:hover{
+    transform: scale(1.5);
+  }
+
+  .leerMas{
+    background-color: rgb(1, 19, 103);
+    border-color: rgb(1, 19, 103);
+    color:aliceblue;
+  }  
+  .leerMas:hover{
+    background-color: rgb(126, 205, 15);
+    border-color: rgb(126, 205, 15);
+    color: rgb(1, 19, 103);
   }
 }
 
@@ -188,109 +216,99 @@ h1{
 
 /*Tienda*/
 
-.priceCard{
-  color:rgb(126, 205, 15);
+.tiendaLink{
+  background-color: rgb(1, 19, 103);
+  border-color: rgb(1, 19, 103);
+  color:aliceblue;
+}  
+
+.tiendaLink:hover{
+  background-color: rgb(126, 205, 15);
+  border-color: rgb(126, 205, 15);
+  color: rgb(1, 19, 103);
+}
+
+.galeria{
+  width: 100%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-auto-rows: 250px;
+  gap: 20px;
+  padding: 20px;
+}
+.contenedor{
+  border: 2px solid rgb(1, 19, 103);
+  border-radius: 10px 10px 10px 10px;
+  box-shadow: 10px 10px 10px -5px rgba(0,0,0,0.6);
+  position:relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+ }
+
+.contenedor img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 1s ease-in-out;
+}
+/* Estilo para el texto de aumento al hover */
+.contenedor .texto {
+  text-align: justify;
+  position: absolute;
+  text-shadow: 2px 2px 0px rgb(126, 205, 15);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+  color:rgb(1, 19, 103);
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.contenedor .priceCard{
+  color:rgb(1, 19, 103);
   font-weight: bold;
   font-size: 1.2rem;
-  background-color: rgb(1, 19, 103);
-  text-align: center;
+  background-color: rgb(126, 205, 15);
+  border-color:rgb(126, 205, 15) ;
+  text-align:center;
+  position: absolute;
+  bottom: -5%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: opacity 0.5s ease-in-out;
+
+}
+.contenedor:hover img {
+  transform: scale(1.5); 
+  filter:initial;
 }
 
-.cardConteiner{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 90%;
-  margin: auto;
-  
-  .card{
-    width: 30%;
-    height: 65vh;
-    border: 2px solid rgb(1, 19, 103);
-    margin: 0 10px 10px 10px;
-    border-radius: 10px 10px 10px 10px;
-    box-shadow: 10px 10px 10px -5px rgba(0,0,0,0.6);
-
-    .imgCard1{
-      width: 80%;
-      justify-content: center;
-    }
-    .imgCard2{
-      width: 80%;
-      margin: 0px;
-      padding: 0px;
-    }
-
-    .imgCard3{
-      width: 100%;
-      margin:0px;
-      padding: 0px;
-    }
-
-    .imgCard4{
-      width: 78%;
-      margin: 0px;
-      padding: 0px;
-    }
-
-    .imgCard5{
-      width: 75%;
-      margin: 0px;
-      padding: 0px;
-    }
-    
-    .imgCard6{
-      width: 100%;
-      margin: 0px;
-      padding: 0px;
-    }
-    
-    .imgCard7{
-      width: 90%;
-      margin: 0px;
-      padding: 0px;
-    }
-    
-    .imgCard8{
-      width: 83%;
-      margin: 0px;
-      padding: 0px;
-    }
-    .imgCard9{
-      width: 68%;
-      margin: 0px;
-      padding: 0px;
-    }
-
-    .bodyCard{
-      margin: 0px;
-      padding:0px 10px 0px 10px;
-      .sale{
-        text-align: center;
-      }
-      .priceCard{
-        color:rgb(126, 205, 15);
-        font-weight: bold;
-        font-size: 1.2rem;
-        background-color: rgb(1, 19, 103);
-        text-align: center;
-      }
-
-    }
-  }
+.contenedor:hover .texto {
+  opacity: 1; 
+  color:rgb(1, 19, 103);
 }
 
-@media screen and (max-width:900px) {
-  .cardContainer {
+.contenedor .priceCard{
+  opacity: 1;
+  color:rgb(1, 19, 103);
+}
+
+@media screen and (max-width:900px){
+    .galeria {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
   }
+}
 
 /*Main contacto */
 .contactForm{
   background-color: rgb(222, 238, 255);
-  width: 80%;
+  width: 50%;
   margin-bottom: 20px;
   .formText{
     font-size: 1.5rem;
@@ -299,6 +317,11 @@ h1{
   .sendButton{
     background-color: rgb(1, 19, 103);
     border-color: rgb(1, 19, 103);
+    width: auto;
   }
+  .sendButton:hover{
+    background-color: rgb(126, 205, 15);
+    border-color: rgb(126, 205, 15);
+    color: rgb(1, 19, 103);
+  }  
 }
-
