--- a/scss/_mainindex.scss
+++ b/scss/_mainindex.scss
@@ -19,6 +19,16 @@
     text-align: justify;
     padding-right: 10px;
     padding-left: 10px;
+  }
+  .historia{
+    width: 95%;
+  }
+  .mision{
+    height: 40vh;
+  }
+  .staff{
+    padding-top: 20px;
+    width: 95%;
   }  
 }
 
